--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,2 @@
 
-steins_gate_0/doc/copysheet.md
-steins_gate_0/doc/结局分支条件.md
-article/sg0/doc/copysheet.md
-article\sg0\doc\结局分支条件.md
+article/sg0/doc/ext/
